Major refactor of the star rating method, replacing CSS with CVG for better scalability and performance.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!doctype html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Beekeeper library test</title>
-    <meta name="description" content="Beekeeper library test">
-    <meta name="author" content="grismar@grismar.net">
+    <title>MusicBee Controller</title>
+    <meta name="description" content="MusicBee Controller">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    
-    <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  
-    <link rel="shortcut icon" href="/favicon.ico">
+      
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
   
     <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" src="json2.js"></script>
