--- a/player.html
+++ b/player.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Beekeeper library test</title>
     <meta name="description" content="Beekeeper player example">
-    <meta name="author" content="grismar@grismar.net">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="author" content="grismar@grismar.net">    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="stylesheet" href="player.css">
     <!--[if lt IE 9]>
