--- a/player.html
+++ b/player.html
@@ -2,14 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Beekeeper library test</title>
-    <meta name="description" content="Beekeeper player example">
-    <meta name="author" content="grismar@grismar.net">    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <title>MusicBee Controller</title>
+    <meta name="description" content="MusicBee Controller">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="stylesheet" href="player.css">
-    <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
     <script src="jquery.js"></script>
     <script src="json2.js"></script>
     <script src="beekeeper.js"></script>
