Bit of a cleanup

--- a/player.html
+++ b/player.html
@@ -5,7 +5,7 @@
     <title>MusicBee Controller</title>
     <meta name="description" content="MusicBee Controller">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.svg">
     <link rel="stylesheet" href="player.css">
     <script src="jquery.js"></script>
     <script src="json2.js"></script>
